<resources>
    <string name="app_name">Restaurant</string>
    <string name="ip">192.168.1.6</string>
    <string name="open">open</string>
    <string name="close">close</string>


    <string name="firstname">First name</string>
    <string name="secondname">Second name</string>
    <string name="usernamee">User name</string>
    <string name="passwardd">Passward</string>
    <string name="phone">Phone</string>
    <string name="action_settings">Settings</string>
    <string name="address">address</string>
    <string name="slalary">salary</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="update">Update</string>
    <string name="admin">admin</string>
    <string name="cachier">cachier</string>
    <string name="jobname">Jobname</string>
    <string name="name">name</string>
    <string name="price">price</string>
    <string name="classify">classify</string>
    <string name="title_activity_location">Map</string>

</resources>
