<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_products"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#5b5872"
    tools:context="vna.example.com.restaurant.Products">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >


   <include layout="@layout/toolbar"
    android:id="@+id/toolbar"/>

            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                >
                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:textColor="#ffffff"

                    />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                >
                <EditText
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/price"
                    android:textColor="#ffffff"

                    />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                >
                <EditText
                    android:id="@+id/classify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/classify"
                    android:textColor="#ffffff"

                    />

            </android.support.design.widget.TextInputLayout>
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_weight="2"
     android:orientation="horizontal"
     >
            <android.support.v7.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/insert"
                android:text="Add"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/btn"
                android:textColor="#ffffff"
                android:textAllCaps="false"
                 android:layout_weight="1"

                />
            <android.support.v7.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/update"
                android:text="Update"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/btn"
                android:textColor="#ffffff"
                android:textAllCaps="false"
                android:layout_weight="1"

                />
             </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                >
                <android.support.v7.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/delete"
                    android:text="Delet"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/btn"
                    android:textColor="#ffffff"
                    android:textAllCaps="false"
                    android:layout_weight="1"

                    />
                <android.support.v7.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/search"
                    android:text="Search"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/btn"
                    android:textColor="#ffffff"
                    android:textAllCaps="false"
                    android:layout_weight="1"

                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
